.provarCaches/00D5f000005vwGkEAI/objects/rstk__soshipdmd__c.object
<CustomObject>
    <description>soshipdmd__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>altextid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soshipdmd_line__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soshipdmd_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp;  rstk__soshipdmd_proj__r.rstk__pjproj_proj__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_lotcontrol__c</fullName>
        <formula>rstk__soshipdmd_soorddmd__r.rstk__soorddmd_compicitem__r.rstk__icitem_lotcontrol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Lotcontrol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soshipdmd_soorddmd__r.rstk__soorddmd_compicitem__r.Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_srlcontrol__c</fullName>
        <formula>rstk__soshipdmd_soorddmd__r.rstk__soorddmd_compicitem__r.rstk__icitem_srlcontrol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Serial Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Component Item of the Product shipped on Shipper.</inlineHelpText>
        <label>Component</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>icitem_compitem_soshipdmd</relationshipLabel>
        <relationshipName>icitem_compitem_soshipdmd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_containerized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demand Has Been Auto-Containerized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_line__c</fullName>
        <inlineHelpText>Shipper Line Number associated with the SO Line of the Component Item of the Product shipped.</inlineHelpText>
        <label>Shipper Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Shipper Demands</relationshipLabel>
        <relationshipName>soshipdmds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable Project associated with this Shipper Demand.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Shipper Demands</relationshipLabel>
        <relationshipName>soshipdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_qtypackage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The demand quantity for this release. (DD)</description>
        <inlineHelpText>Quantity Packaged on Shipper.  This is only applicable when not using Consolidated Order Fulfillments.</inlineHelpText>
        <label>Qty Packaged</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The demand quantity per for this release (calculated by dividing the shipper demand quantity package by the shipper line quantity package. (DD)</description>
        <inlineHelpText>Quantity per of the Component Item of the Product on Shipper.</inlineHelpText>
        <label>Qty Per</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_soorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A link to the Sales Order Line Demand associated with this Shipper Demand.</inlineHelpText>
        <label>Sales Order Demand</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipLabel>Shipper Demands</relationshipLabel>
        <relationshipName>Shipper_Demands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmd_sormadmd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The RMA (Return Material Authorization) Line Demand associated with this Shipper Demand.</inlineHelpText>
        <label>RMA Demand</label>
        <referenceTo>rstk__sormadmd__c</referenceTo>
        <relationshipLabel>Shipper Demands</relationshipLabel>
        <relationshipName>soshipdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Shipper Demand</label>
    <listViews>
        <fullName>rstk__RS_Shipper_Demands</fullName>
        <columns>NAME</columns>
        <columns>rstk__soshipdmd_line__c</columns>
        <columns>rstk__soshipdmd_compitem__c</columns>
        <columns>rstk__soshipdmd_qtyper__c</columns>
        <columns>rstk__soshipdmd_qtypackage__c</columns>
        <columns>rstk__soshipdmd_soorddmd__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Shipper Demands</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shipper Demand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipper Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>